cleanup: adopt sequenced collection accessors